# verifiable-langchain-agent

./: .env.example  README.md  pyproject.toml
.github/workflows/: python.yml
src/verifiable_agent/: __init__.py
src/verifiable_langchain_agent/: __init__.py  redpill_langchain.py
test/: test_redpill_langchain_agent.py
tests/: test_redpill_langchain_agent.py
